[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name="Brénainn Woodsend", email="bwoodsend@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "strictyaml",
    "appdirs",
    "toml",
]
description = """\
  A CLI tool to convert Python packages into a wide range of Linux distributions \
  packages. \
"""
license = { file="LICENSE" }
name = "polycotylus"
requires-python  = ">=3.8"
readme = "README.rst"
version = "0.1.0"

[project.optional-dependencies]
test = [
    "pytest>=3",
    "pytest_ordered @ https://github.com/bwoodsend/pytest-ordered/archive/c86f9f460bb24b1029f6ce77feefea0e011e1b90.zip",
    "coverage",
    "pytest-cov",
    "pillow",
    "pyzstd",
]

[project.urls]
"Homepage" = "https://github.com/bwoodsend/polycotylus"

[project.scripts]
polycotylus = "polycotylus.__main__:cli"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["polycotylus"]

[tool.autopep8]
max_line_length = 80
ignore = "E501,E701,E702,E703,E722,E731"
