[project]
name = "bare-minimum"
description = "A package with the least possible configuration acceptable to polycotylus"
authors = [
    { name="Brénainn Woodsend", email="bwoodsend@gmail.com" },
]
version = "1.2.3"

classifiers = [
    "License :: OSI Approved :: MIT License",
]

dependencies = ["ubrotli"]

[project.urls]
"homepage" = "https://github.com/bwoodsend/polycotylus"
