[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dumb_text_viewer"
version = "0.1.0"
authors = [
  { name="Brénainn Woodsend", email="bwoodsend@gmail.com" },
]
description = "A small example GUI package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"homepage" = "https://github.com/me/blah"

[project.gui-scripts]
dumb_text_viewer = "dumb_text_viewer.__main__:main"
