[project]
name = "blahblahblah"
description = "..."
authors = [
    { name="Brénainn Woodsend", email="bwoodsend@gmail.com" },
]
version = "1.2.3"
license = { file="LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/bwoodsend/polycotylus"

[project.optional-dependencies]
abc = ["pyperclip", "numpy"]
xyz = ["humanize"]
