[project]
name = "blahblahblah"
description = "..."
authors = [
    { name="The blahblahblah team", email="support@blahblahblah.com" },
]
version = "1.2.3"
license = { file="LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"homepage" = "https://github.com/bwoodsend/polycotylus"

[project.optional-dependencies]
abc = ["pyperclip", "numpy"]
xyz = ["coverage"]
