[project]
name = "hatchling-based"
version = "0.1.0"
description = "Yet another test package"
requires-python = ">=3.7"
license = "BlueOak-1.0.0"
authors = [{name="Brénainn Woodsend", email="bwoodsend@gmail.com"}]
dependencies = ["platformdirs"]

[project.urls]
homepage = "https://example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
