[project]
name = "hatchling-based"
description = "Yet another test package"
requires-python = ">=3.7"
license = "BlueOak-1.0.0"
authors = [{name="Brénainn Woodsend", email="bwoodsend@gmail.com"}]
dynamic = ["dependencies", "version"]

[project.urls]
homepage = "https://example.com"

[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"
