[project]
name = "99...S1Lly---namE___PACKAG3-.x-_y_.z"
description = "🚀 🦄 \"quoted\" 'quoted again' $$$"
authors = [
    { name="Brénainn Woodsend", email="bwoodsend@gmail.com" },
]
version = "1.2.3"
license = { file="The license file" }
dependencies = ["certifi"]

[build-system]
requires = ["colorama", "setuptools"]

[project.urls]
"homepage" = "https://github.com/bwoodsend/polycotylus"

[tool.setuptools]
py-modules = ["sIlLy_Nam3"]
